[gd_scene load_steps=8 format=2]

[ext_resource path="res://UI/Dialogue/Dialogue.gd" type="Script" id=1]
[ext_resource path="res://Characters/furoshiki/front-standing.png" type="Texture" id=2]
[ext_resource path="res://UI/Dialogue/arrow.png" type="Texture" id=3]
[ext_resource path="res://UI/Fonts/Arial/arialbold_font_big.tres" type="DynamicFont" id=5]
[ext_resource path="res://UI/Assets/window.tscn" type="PackedScene" id=6]

[sub_resource type="StyleBoxEmpty" id=13]

[sub_resource type="Animation" id=25]
resource_name = "arrow_move"
loop = true
tracks/0/type = "bezier"
tracks/0/path = NodePath("Arrow:rect_position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray(  ),
"times": PoolRealArray(  )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("Arrow:rect_position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 25, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5, 1 )
}

[node name="Dialogue" type="MarginContainer"]
unique_name_in_owner = true
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -440.0
margin_bottom = -70.0
rect_min_size = Vector2( 0, 80 )
custom_constants/margin_top = 10
script = ExtResource( 1 )

[node name="CenterContainer" type="CenterContainer" parent="."]
margin_top = 10.0
margin_right = 1920.0
margin_bottom = 370.0

[node name="window" parent="CenterContainer" instance=ExtResource( 6 )]
margin_left = 600.0
margin_top = 60.0
margin_right = 1320.0
margin_bottom = 300.0
rect_min_size = Vector2( 720, 240 )

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/window"]
margin_left = 16.0
margin_top = 16.0
margin_right = 704.0
margin_bottom = 224.0
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/window/VBoxContainer"]
margin_right = 688.0
margin_bottom = 208.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MainDialogueContainer" type="MarginContainer" parent="CenterContainer/window/VBoxContainer/HBoxContainer"]
margin_right = 484.0
margin_bottom = 208.0
rect_min_size = Vector2( 240, 0 )
size_flags_horizontal = 3
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20

[node name="DialogueVBox" type="VBoxContainer" parent="CenterContainer/window/VBoxContainer/HBoxContainer/MainDialogueContainer"]
unique_name_in_owner = true
margin_left = 20.0
margin_top = 20.0
margin_right = 464.0
margin_bottom = 188.0

[node name="DialogueAuthor" type="Label" parent="CenterContainer/window/VBoxContainer/HBoxContainer/MainDialogueContainer/DialogueVBox"]
unique_name_in_owner = true
margin_right = 444.0
margin_bottom = 40.0
rect_min_size = Vector2( 0, 40 )
custom_colors/font_color = Color( 0.960784, 0.752941, 0.396078, 1 )
custom_colors/font_outline_modulate = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 5 )
text = "CATARP!"
valign = 1

[node name="Arrow" type="TextureRect" parent="CenterContainer/window/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
margin_left = 488.0
margin_right = 524.0
margin_bottom = 208.0
texture = ExtResource( 3 )
stretch_mode = 6

[node name="InfoDialogueContainer" type="MarginContainer" parent="CenterContainer/window/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
margin_left = 528.0
margin_right = 688.0
margin_bottom = 208.0
rect_min_size = Vector2( 160, 0 )
size_flags_horizontal = 7
size_flags_stretch_ratio = 0.15
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10

[node name="PanelContainer" type="PanelContainer" parent="CenterContainer/window/VBoxContainer/HBoxContainer/InfoDialogueContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 150.0
margin_bottom = 198.0
custom_styles/panel = SubResource( 13 )

[node name="DialogueImage" type="TextureRect" parent="CenterContainer/window/VBoxContainer/HBoxContainer/InfoDialogueContainer/PanelContainer"]
unique_name_in_owner = true
margin_right = 140.0
margin_bottom = 188.0
size_flags_vertical = 3
texture = ExtResource( 2 )
expand = true
stretch_mode = 6
flip_h = true

[node name="DialogueAnimation" type="AnimationPlayer" parent="CenterContainer/window/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
anims/arrow_move = SubResource( 25 )

[node name="Button" type="Button" parent="CenterContainer/window/VBoxContainer"]
visible = false
margin_top = 211.0
margin_right = 718.0
margin_bottom = 234.0
text = "Skip"
